Add tests for prometheus json comprehension